# src/main/java/se/sundsvall/datawarehousereader/api/model/invoice/CustomerInvoiceParameters.java
@@ -2,6 +2,7 @@ package se.sundsvall.datawarehousereader.api.model.invoice;
 
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotEmpty;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
@@ -14,8 +15,18 @@ import se.sundsvall.dept44.models.api.paging.AbstractParameterPagingBase;
 @ParameterObject
 public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 
+	@ArraySchema(schema = @Schema(description = "Customer numbers", examples = "216870"), minItems = 1)
+	@NotEmpty
+	private List<String> customerNumbers;
+
 	@ArraySchema(schema = @Schema(description = "Organization id of invoice issuer", examples = "5565027223"))
 	private List<String> organizationIds;
+
+	@ArraySchema(schema = @Schema(description = "Facility ids to filter by. A row matches if any of its facility ids contains a requested value", examples = "735999109425048010"))
+	private List<String> facilityIds;
+
+	@Schema(description = "Invoice status", examples = "Betalad")
+	private String status;
 
 	@Schema(description = "Earliest invoice period start. Format is YYYY-MM-DD.", examples = "2025-01-01")
 	@DateTimeFormat(iso = ISO.DATE)
@@ -34,6 +45,19 @@ public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 		return new CustomerInvoiceParameters();
 	}
 
+	public List<String> getCustomerNumbers() {
+		return customerNumbers;
+	}
+
+	public void setCustomerNumbers(final List<String> customerNumbers) {
+		this.customerNumbers = customerNumbers;
+	}
+
+	public CustomerInvoiceParameters withCustomerNumbers(final List<String> customerNumbers) {
+		this.customerNumbers = customerNumbers;
+		return this;
+	}
+
 	public List<String> getOrganizationIds() {
 		return organizationIds;
 	}
@@ -44,6 +68,32 @@ public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 
 	public CustomerInvoiceParameters withOrganizationIds(final List<String> organizationIds) {
 		this.organizationIds = organizationIds;
+		return this;
+	}
+
+	public List<String> getFacilityIds() {
+		return facilityIds;
+	}
+
+	public void setFacilityIds(final List<String> facilityIds) {
+		this.facilityIds = facilityIds;
+	}
+
+	public CustomerInvoiceParameters withFacilityIds(final List<String> facilityIds) {
+		this.facilityIds = facilityIds;
+		return this;
+	}
+
+	public String getStatus() {
+		return status;
+	}
+
+	public void setStatus(final String status) {
+		this.status = status;
+	}
+
+	public CustomerInvoiceParameters withStatus(final String status) {
+		this.status = status;
 		return this;
 	}
 
@@ -90,7 +140,7 @@ public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 	public int hashCode() {
 		final int prime = 31;
 		int result = super.hashCode();
-		result = prime * result + Objects.hash(organizationIds, periodFrom, periodTo, sortBy);
+		result = prime * result + Objects.hash(customerNumbers, organizationIds, facilityIds, status, periodFrom, periodTo, sortBy);
 		return result;
 	}
 
@@ -105,7 +155,10 @@ public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 		if (!(obj instanceof CustomerInvoiceParameters other)) {
 			return false;
 		}
-		return Objects.equals(organizationIds, other.organizationIds)
+		return Objects.equals(customerNumbers, other.customerNumbers)
+			&& Objects.equals(organizationIds, other.organizationIds)
+			&& Objects.equals(facilityIds, other.facilityIds)
+			&& Objects.equals(status, other.status)
 			&& Objects.equals(periodFrom, other.periodFrom)
 			&& Objects.equals(periodTo, other.periodTo)
 			&& Objects.equals(sortBy, other.sortBy);
@@ -113,7 +166,10 @@ public class CustomerInvoiceParameters extends AbstractParameterPagingBase {
 
 	@Override
 	public String toString() {
-		return "CustomerInvoiceParameters [organizationIds=" + organizationIds
+		return "CustomerInvoiceParameters [customerNumbers=" + customerNumbers
+			+ ", organizationIds=" + organizationIds
+			+ ", facilityIds=" + facilityIds
+			+ ", status=" + status
 			+ ", periodFrom=" + periodFrom
 			+ ", periodTo=" + periodTo
 			+ ", sortBy=" + sortBy
